# claude-memo

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  dist-workspace.toml
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
docs/: verification.md
docs/plans/: 2026-01-29-design.md
specs/001-core-prototype/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-prototype/checklists/: requirements.md
specs/001-core-prototype/contracts/: cli-commands.md
specs/002-rename-favorite-mark/: plan.md  spec.md  tasks.md
specs/002-rename-favorite-mark/checklists/: requirements.md
src/: cli.rs  config.rs  error.rs  exporter.rs  indexer.rs  lib.rs  main.rs  parser.rs  search.rs  storage.rs
tests/: cli_test.rs
tests/integration/: mark_commands.rs
tests/mock/: history.jsonl
