[package]
name = "claude-memo"
version = "0.1.0"
edition = "2024"
description = "Claude Code session record management tool"
authors = ["yym"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
opt-level = 3
