[package]
name = "claude-memo"
version = "0.1.0"
edition = "2021"
description = "Claude Code session record management tool"
license = "MIT"
authors = ["elliotxx <951376975@qq.com>"]
repository = "https://github.com/elliotxx/claude-memo"
homepage = "https://github.com/elliotxx/claude-memo"
documentation = "https://github.com/elliotxx/claude-memo"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = "0.31"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "5"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

